[package]
name = "camp-misty"
version = "0.1.0"
authors = ["Connor <ReeCocho@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
byteorder = "1"